@@ -1,19 +1,27 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         File-PathInfo-Ext
-version:      1.24
-version_from: lib/File/PathInfo/Ext.pm
-installdirs:  site
+--- #YAML:1.0
+name:               File-PathInfo-Ext
+version:            1.27
+abstract:           ~
+author:  []
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    Carp:                          1
-    Cwd:                           3
-    Digest::MD5:                   2
-    File::Copy:                    2
-    File::Path:                    1
-    File::PathInfo:                1
-    File::Type:                    0
-    Test::Simple:                  0
-    YAML:                          0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    Carp:            1
+    Cwd:             3
+    Digest::MD5:     2
+    File::Copy:      2
+    File::Path:      1
+    File::PathInfo:  1
+    File::Type:      0
+    Test::Simple:    0
+    YAML:            0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
